--- a/Knowledge_Base/01p.md
+++ b/Knowledge_Base/01p.md
@@ -1,6 +1,14 @@
+[Psych Central](https://psychcentral.com/)<br />
+na<br />
+"tags": ["education", "web portal", "forums", "resources", "community", "doctors", "blogs", "news"]<br />
+-<br />
 [Psych Survivor YYC](https://psychsurvivoryyc.wordpress.com/)<br />
 na<br />
 "tags": ["wordpress", "blogs", "psychiatric survivor movement", "Canada"]<br />
+-<br />
+[Psych Central Resource Directory](https://psychcentral.com/resources/)<br />
+na<br />
+"tags": ["resource", "directory"]<br />
 -<br />
 [Pharmageddon](https://www.amazon.com/Pharmageddon-David-Healy/dp/0520275764)<br />
 na<br />
