--- a/Knowledge_Base/01v.md
+++ b/Knowledge_Base/01v.md
@@ -1,3 +1,7 @@
+[Vital Mind Stories: Reversing Treatment Resistant Schizophrenia](http://kellybroganmd.com/vital-mind-stories-kim/)<br />
+na<br />
+"tags": ["Kelly Brogan", "schizophrenia", "non-pharmacological", "nutrition", "discussion", "doctors"]<br />
+-<br />
 [Vegas Shooter was Reportedly Prescribed Anti-Anxiety Meds](https://www.madinamerica.com/2017/10/vegas-shooter-prescribed-meds/)<br />
 2017-10-06<br />
 "tags": ["crime", "medication", "news", "discussion"]<br />
