--- a/Knowledge_Base/01c.md
+++ b/Knowledge_Base/01c.md
@@ -4,7 +4,7 @@
 -<br />
 [Culling the $$$ Evidence: National Alliance for Mental Illness](http://ahrp.org/culling-the-evidence-national-alliance-for-mental-illness/)<br />
 2009-04-18<br />
-"tags": ["advocacy", "human rights", "medication", "conflicts-of-interest", "AHRP"]<br />
+"tags": ["advocacy", "human rights", "medication", "conflicts-of-interest", "AHRP", "NAMI"]<br />
 -<br />
 [Center for Mindful Self-Compassion](https://centerformsc.org/)<br />
 na<br />
