--- a/Knowledge_Base/01d.md
+++ b/Knowledge_Base/01d.md
@@ -1,6 +1,10 @@
+[Doctors put me on 40 different meds for bipolar and depression. It almost killed me](https://medium.com/anxy-magazine/doctors-put-me-on-40-different-meds-for-bipolar-and-depression-it-almost-killed-me-c5e4fbea2816)<br />
+2016-05-31<br />
+"tags": ["viewpoint", "psychiatric survivor", "medium", "personal stories", "bipolar disorder"]<br />
+-<br />
 [Does a Suicide Go To Heaven?](https://lensgirl53.wordpress.com/does-a-suicide-go-to-heaven/)<br />
 2013-05-27<br />
-"tags": ["wordpress", "blogs", "christian", "spirituality", "suicide", "mothers", "children"]<br />
+"tags": ["wordpress", "blogs", "christian", "spirituality", "suicide", "mothers", "children", "viewpoint"]<br />
 -<br />
 [Dialectical Behavior Therapy (DBT) Resources](https://behavioraltech.org/resources/)<br />
 na<br />
