minor link updates

--- a/Knowledge_Base/01p.md
+++ b/Knowledge_Base/01p.md
@@ -8,7 +8,7 @@ na<br />
 -<br />
 [Psych Central Resource Directory](https://psychcentral.com/resources/)<br />
 na<br />
-"tags": ["resource", "directory"]<br />
+"tags": ["resources", "directory"]<br />
 -<br />
 [Pharmageddon](https://www.amazon.com/Pharmageddon-David-Healy/dp/0520275764)<br />
 na<br />
