--- a/Knowledge_Base/01d.md
+++ b/Knowledge_Base/01d.md
@@ -4,7 +4,7 @@
 -<br />
 [Does a Suicide Go To Heaven?](https://lensgirl53.wordpress.com/does-a-suicide-go-to-heaven/)<br />
 2013-05-27<br />
-"tags": ["wordpress", "blogs", "christian", "spirituality", "suicide", "mothers", "children", "viewpoint"]<br />
+"tags": ["wordpress", "christian", "spirituality", "suicide", "mothers", "children", "viewpoint", "death", "personal stories"]<br />
 -<br />
 [Dialectical Behavior Therapy (DBT) Resources](https://behavioraltech.org/resources/)<br />
 na<br />
