--- a/Knowledge_Base/01f.md
+++ b/Knowledge_Base/01f.md
@@ -4,5 +4,5 @@ na<br />
 -<br />
 [Finding Humor After The Death Of A Loved One](https://thoughtcatalog.com/kelly-bishop/2016/02/finding-humor-after-the-death-of-a-loved-one/)<br />
 2016-02-09<br />
-"tags": ["humor", "grief and loss", "coping", "family", "blogs"]<br />
+"tags": ["humor", "grief and loss", "coping", "family", "blogs", "death"]<br />
 -<br />
