(#109 wip)[skip ci]
* add @mhprompt
* add psych survivor wiki page
* edited/added some tags
* most of the dates have been removed @jamielthompson29,
I'll take care of double-checking within the next few days.
You can continue to work on #109 as planned. I'll keep an
eye out for any questions you have about it.

--- a/Knowledge_Base/EN/01b.md
+++ b/Knowledge_Base/EN/01b.md
@@ -1,5 +1,5 @@
 [Bad Pharma: How Drug Companies Mislead Doctors and Harm Patients](http://a.co/fUqjjn0)<br />
-"tags": ["books", "medication", "Ben Goldacre", "doctors"]<br />
+"tags": ["books", "Ben Goldacre", "doctors", "conflicts-of-interest"]<br />
 -<br />
 [Black Dog Institute](https://www.blackdoginstitute.org.au/)<br />
 "tags": ["workplace", "community", "resources", "directory", "education", "training", "research"]<br />
