--- a/Knowledge_Base/EN/01p.md
+++ b/Knowledge_Base/EN/01p.md
@@ -1,8 +1,11 @@
+[Psychiatric survivors movement - Wikipedia](https://en.wikipedia.org/wiki/Psychiatric_survivors_movement)<br />
+"tags": ["research", "wikipedia", "psych survivors"]<br />
+-<br />
 [Psych Central](https://psychcentral.com/)<br />
 "tags": ["education", "web portal", "forums", "resources", "community", "doctors", "blogs", "news"]<br />
 -<br />
 [Psych Survivor YYC](https://psychsurvivoryyc.wordpress.com/)<br />
-"tags": ["wordpress", "blogs", "psychiatric survivor movement", "Canada"]<br />
+"tags": ["wordpress", "blogs", "psych survivors", "Canada"]<br />
 -<br />
 [Psych Central Resource Directory](https://psychcentral.com/resources/)<br />
 "tags": ["resources", "directory"]<br />
@@ -11,5 +14,5 @@
 "tags": ["books", "David Healy", "doctors", "medication"]<br />
 -<br />
 [Psychiatry Under the Influence: Institutional Corruption, Social Injury, and Prescriptions for Reform](http://a.co/esrRJm4)<br />
-"tags": ["books", "journalism", "Robert Whitaker", "psychiatry", "medication", "Lisa Cosgrove"]<br />
+"tags": ["books", "journalism", "Robert Whitaker", "psychiatry", "Lisa Cosgrove", "conflicts-of-interest"]<br />
 -<br />
