--- a/Knowledge_Base/EN/01r.md
+++ b/Knowledge_Base/EN/01r.md
@@ -5,5 +5,5 @@
 "tags": ["communication", "support", "suicide prevention", "crisis", "directory", "resources", "Australia"]<br />
 -<br />
 [RxISK blog](https://rxisk.org/blog/)<br />
-"tags": ["blogs", "medication", "collaborative", "doctors"]<br />
+"tags": ["blogs", "side effects", "collaborative", "doctors"]<br />
 -<br />
