--- a/Knowledge_Base/EN/01s.md
+++ b/Knowledge_Base/EN/01s.md
@@ -2,8 +2,8 @@
 "tags": ["selfcare", "collaborative", "resources", "directory", "technology"]<br />
 -<br />
 [Side Effects: A Prosecutor, a Whistleblower, and a Bestselling Antidepressant on Trial](http://a.co/0BuSDiT)<br />
-"tags": ["books", "Alison Bass", "journalism", "medication"]<br />
+"tags": ["books", "Alison Bass", "journalism", "side effects", "conflicts-of-interest"]<br />
 -<br />
 [SSRI Stories](https://ssristories.org/)<br />
-"tags": ["ssri", "medication", "news", "collection"]<br />
+"tags": ["ssri", "side effects", "news", "collection"]<br />
 -<br />
