--- a/Knowledge_Base/EN/01a.md
+++ b/Knowledge_Base/EN/01a.md
@@ -1,10 +1,9 @@
 [Antidepressants Increase Risk of Diabetes, Heart Attack, and Dementia](https://www.wellnessresources.com/news/antidepressants-increase-risk-of-diabetes-heart-attack-and-dementia)<br />
-2017-10-09<br />
 "tags": ["antidepressants", "safety", "nutrition", "chiropractors", "health risks"]<br />
 -<br />
 [Alliance for Human Research Protection](http://ahrp.org/)<br />
 "tags": ["doctors", "human_rights", "news", "blogs", "collaborative", "AHRP"]<br />
 -<br />
 [Anatomy of an Epidemic: Magic Bullets, Psychiatric Drugs, and the Astonishing Rise of Mental Illness in America](http://a.co/8ZkS4i5)<br />
-"tags": ["Robert Whitaker", "journalism", "medication", "books"]<br />
+"tags": ["Robert Whitaker", "journalism", "books", "side effects"]<br />
 -<br />
