--- a/Knowledge_Base/EN/01m.md
+++ b/Knowledge_Base/EN/01m.md
@@ -1,3 +1,6 @@
+[Prompt - Mental health in the technology industry](http://mhprompt.org/)<br />
+"tags": ["OSMI", "technology", "public speaking", "events", "resources", "discussion"]<br />
+-<br />
 [MedWatch: The FDA Safety Information and Adverse Event Reporting Program](https://www.fda.gov/Safety/MedWatch/)<br />
 "tags": ["FDA", "USA", "government", "medication", "safety"]<br />
 -<br />
@@ -8,8 +11,8 @@
 "tags": ["journalism", "news", "blogs", "stories", "social justice", "Will Hall"]<br />
 -<br />
 [Men: how to have a conversation with a mate about mental health](https://www.health.qld.gov.au/news-alerts/news/men-how-to-have-conversation-mate-mental-health)<br />
-2017-10-09<br />
 "tags": ["men", "friendships", "mates", "providing support", "advice", "Australia"]<br />
 -<br />
 [MindFreedom International](http://mindfreedom.org/)<br />
-"tags": ["human rights", "news", "advocacy"]<br />
+"tags": ["human rights", "news", "advocacy", "psych survivors"]<br />
+-<br />
