--- a/Knowledge_Base/EN/01o.md
+++ b/Knowledge_Base/EN/01o.md
@@ -1,5 +1,5 @@
 [Open Sourcing Mental Illness (OSMI)](https://osmihelp.org)<br />
-"tags": ["open_source", "tech_industry", "education"]<br />
+"tags": ["open_source", "tech_industry", "education", "OSMI", "resources", "discussion"]<br />
 -<br />
 [Overdosed America: The Broken Promise of American Medicine](http://a.co/aOGY247)<br />
 "tags": ["books", "medication", "John Abramson", "doctors"]<br />
